change method to print

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <h1>Welcome to My Website</h1>
     </header>
-    <button onclick="window.print()">Print button</button>
+    <button onclick="document.execCommand('print')">Print button</button>
     <footer>
       <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
