--- a/index.html
+++ b/index.html
@@ -4,60 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Print Page Example</title>
-    <style>
-      .alert {
-        display: none;
-        color: red;
-        font-weight: bold;
-      }
-    </style>
   </head>
   <body>
     <header>
       <h1>Welcome to My Website</h1>
-      <nav>
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
     </header>
-
-    <section>
-      <h2>Content Section</h2>
-      <p>This is some content on the page.</p>
-      <button id="printButton">Print this page</button>
-      <p class="alert" id="inAppAlert">
-        Printing may not be supported in this browser. Please open in Safari or
-        another browser.
-      </p>
-    </section>
-
+    <button onclick="window.print()">Print this page</button>
     <footer>
       <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
-
-    <script src="cordova.js"></script>
-    <script>
-      document.getElementById("printButton").onclick = function () {
-        // Use Cordova's InAppBrowser to open a new window with the content to print
-        const ref = cordova.InAppBrowser.open(
-          "about:blank",
-          "_blank",
-          "location=no"
-        );
-
-        ref.addEventListener("loadstop", function () {
-          ref.executeScript({
-            code: `
-                            document.body.innerHTML = '<h2>Content Section</h2><p>This is some content on the page.</p>';
-                            window.print();
-                        `,
-          });
-        });
-      };
-    </script>
   </body>
 </html>
